--- a/Projects/Rust/CICDAsGithubAction_Readymlfile_hashRepo_SendtoHttpServer/Cargo.toml
+++ b/Projects/Rust/CICDAsGithubAction_Readymlfile_hashRepo_SendtoHttpServer/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["amitk"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
 git2 = "0.8"
 #serde = { version = "1.0", features = ["derive"] }
