--- a/Projects/Rust/CICDAsGithubAction_Readymlfile_hashRepo_SendtoHttpServer/Cargo.toml
+++ b/Projects/Rust/CICDAsGithubAction_Readymlfile_hashRepo_SendtoHttpServer/Cargo.toml
@@ -4,15 +4,13 @@ version = "0.1.0"
 authors = ["amitk"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 git2 = "0.8"
 #serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = "2.33.3"
 futures = { version = "0.3.*" }
-tokio = {version = "0.2.*", features = ["full"] }
+tokio = {version = "1.8.4", features = ["full"] }   //or version=.02.*
 log = {version = "0.4"}
 reqwest = {version = "0.11.10"}
 http = {version = "0.2"}
